spacing fixes

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -27,7 +27,7 @@
   .Buttons {
     justify-self: flex-end;
     margin-left: auto;
-    margin-right: 20px;
+    margin-right: 10px;
     font-size: 40px;
   }
 
